--- a/REST-Backend+Web/public/Game web.html
+++ b/REST-Backend+Web/public/Game web.html
@@ -20,9 +20,9 @@
             <button type="submit" class="submit-btn">Log in</button>
         </form>
         <form id="register" class="input-group">
-            <input type="text" class="input-field" placeholder="Id Usuario" required>
-            <input type="email" class="input-field" placeholder="Id email" required>
-            <input type="text" class="input-field" placeholder="Introduce contraseña" required>
+            <input type="text" class="input-field" placeholder="Username" required>
+            <input type="email" class="input-field" placeholder="Email" required>
+            <input type="text" class="input-field" placeholder="Password" required>
             <input type="checkbox" class="check-box"><span>Estoy de acuerdo con los términos & condiciones</span>
             <button type="submit" class="submit-btn">Register</button>
         </form>
